@@ -422,13 +422,13 @@ AC_PATH_XTRA
 AM_PATH_GTK_2_0(gtk_required_version, :,
     AC_MSG_ERROR(Test for GTK+ failed. See the file 'INSTALL' for help.))
 
-AC_MSG_CHECKING([if GTK+ is version 2.7.0 or newer])
-if $PKG_CONFIG --atleast-version=2.7.0 gtk+-2.0; then
-  have_gtk_2_7=yes
+AC_MSG_CHECKING([if GTK+ is version 2.9.0 or newer])
+if $PKG_CONFIG --atleast-version=2.9.0 gtk+-2.0; then
+  have_gtk_2_9=yes
 else
-  have_gtk_2_7=no
+  have_gtk_2_9=no
 fi
-AC_MSG_RESULT($have_gtk_2_7)
+AC_MSG_RESULT($have_gtk_2_9)
 
 PKG_CHECK_MODULES(GDK_PIXBUF, gdk-pixbuf-2.0 >= gdk_pixbuf_required_version)
 
@@ -446,13 +446,13 @@ PKG_CHECK_MODULES(PANGOFT2, pangoft2 >= pangoft2_required_version, :,
 *** We require Pango with the optional support for FreeType2 compiled in.
 *** See the file 'INSTALL' for more help.]))
 
-AC_MSG_CHECKING([if Pango is version 1.9.0 or newer])
-if $PKG_CONFIG --atleast-version=1.9.0 pango; then
-  have_pango_1_9=yes
+AC_MSG_CHECKING([if Pango is version 1.11.0 or newer])
+if $PKG_CONFIG --atleast-version=1.11.0 pango; then
+  have_pango_1_11=yes
 else
-  have_pango_1_9=no
+  have_pango_1_11=no
 fi
-AC_MSG_RESULT($have_pango_1_9)
+AC_MSG_RESULT($have_pango_1_11)
 
 gimp_save_CFLAGS=$CFLAGS
 CFLAGS="$PANGOFT2_CFLAGS $CFLAGS"
@@ -1202,6 +1202,11 @@ if $PKG_CONFIG --atleast-version=0.4 poppler-glib; then
             [Define to 1 if libpoppler >= 0.4 is available])
 fi
 
+if $PKG_CONFIG --atleast-version=0.4.1 poppler-glib; then
+  AC_DEFINE(HAVE_POPPLER_0_4_1, 1,
+            [Define to 1 if libpoppler >= 0.4.1 is available])
+fi
+
 #################################################
 # Check for gnome-vfs (and optionally libgnomeui)
 #################################################
@@ -1600,11 +1605,11 @@ if test "x$have_glib_2_9" != "xyes"; then
   CPPFLAGS="${CPPFLAGS} -DG_DISABLE_DEPRECATED"
 fi
 
-if test "x$have_gtk_2_7" != "xyes"; then
+if test "x$have_gtk_2_9" != "xyes"; then
   CPPFLAGS="${CPPFLAGS} -DGDK_PIXBUF_DISABLE_DEPRECATED -DGDK_DISABLE_DEPRECATED -DGTK_DISABLE_DEPRECATED"
 fi
 
-if test "x$have_pango_1_9" != "xyes"; then
+if test "x$have_pango_1_11" != "xyes"; then
   CPPFLAGS="${CPPFLAGS} -DPANGO_DISABLE_DEPRECATED"
 fi
 
